--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
         
 #container {
    background: var(--bg-primary);
-   height: 100vh;
+   height: 100%;
 }
 
 .content-up-left {
@@ -64,7 +64,7 @@ body {
 
 .logo {
    width: 125px;
-   margin-bottom: 55px;
+   margin-bottom: 45px;
 }
 
 .banner {   
@@ -74,6 +74,7 @@ body {
 
 .content-down-right {
    height: 50vh;
+   min-height: 370px;
    padding: 0 35px;
    text-align: center;
 }
@@ -100,6 +101,7 @@ body {
    justify-content: center;
    list-style: none;
    gap: 15px;
+   padding-bottom: 25px;
 }
 
 #social-media-links a {
@@ -155,12 +157,12 @@ body {
         
 #container {
    background: var(--bg-primary);   
-   height: 100vh;
+   height: 100%;
 }
 
 .content-up-left {
    background: url('./images/bg-mobile.svg') no-repeat center center/cover;
-   height: 50vh;
+   /* height: 50vh; */
    padding: 40px;
    display: flex;
    justify-content: center;
@@ -180,6 +182,7 @@ body {
 
 .content-down-right {
    height: 50vh;
+   min-height: 350px;
    padding: 35px;
    text-align: center;   
    margin: 0 10%;
@@ -260,12 +263,12 @@ body {
    background-position: center; 
    background-repeat: no-repeat;
    background-size: cover;
-   height: 100vh;   
+   height: 100%;   
 }
 
 .content-up-left { 
    background: url('./images/bg-desktop.svg') no-repeat center center/cover; 
-   height: 50vh;
+   /* height: 50vh; */
    padding: 40px;
    display: flex;
    justify-content: center;
@@ -287,6 +290,7 @@ body {
    justify-content: center;
    align-items: center;
    height: 50vh;
+   min-height: 530px;
    padding: 35px;
    text-align: center;   
    margin: 0 10%;
@@ -426,7 +430,7 @@ body {
 #social-media-links {
    position: absolute;
    right: 100px;
-   bottom: -280px;
+   bottom: -200px;
    display: flex;
    flex-direction: row;
    justify-content: center;
